--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "fastify": "^2.15.0",
     "fastify-redis": "^4.0.1",
+    "fastify-static": "^2.7.0",
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {}
